--- a/templates/show_discription_book.html
+++ b/templates/show_discription_book.html
@@ -61,6 +61,10 @@
                 <div class="book_image">
                     <img src="https://online-knigi.com.ua/pic/6/9/8/1/0/7/kniga-teploizolyacionnye-raboty-spravochnoe-posobie.jpg" alt="">
                 </div>
+                <div class="book_count_pages">Количество страниц: 365</div>
+                <div class="book_date">Год издания: 2010</div>
+                <div class="book_publishing_house">Под издательством: Пажилой жмапринт</div>
+
             </div>
 
             <div class="book_title_description">
