--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
             <a href="#" class="index_title_block_link">Новинки книг</a>
         </div>
         <div class="book_snippets">
-            <a href="../templates/show_discription_book.html" class="book_snippet">
+            <a href="book/1" class="book_snippet">
                 <div class="book_snippet_image">
                     <img src="https://online-knigi.com.ua/pic/7/2/5/9/7/2/kniga-tvoe-slovo-si.webp" alt="">
                 </div>
