add forms authorization and reg + edit header

--- a/templates/authorization.html
+++ b/templates/authorization.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/style_header.css" type="text/css">
-    <link rel="stylesheet" href="../static/style_show_book.css" type="text/css">
+    <link rel="stylesheet" href="../static/style_authorization.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
@@ -63,68 +63,17 @@
         </div>
     </div>
     <div class="main_container container">
-        <div class="book_page">
-            <div class="book_image_other">
-                <div class="book_image">
-                    <img src="https://online-knigi.com.ua/pic/6/9/8/1/0/7/kniga-teploizolyacionnye-raboty-spravochnoe-posobie.jpg" alt="">
+        <div class="authorization">
+            <h1>Вход</h1>
+            <form class="form_authorization" action="">
+                <div class="form_item">
+                    <label>E-mail</label><input class="input_autho input_email" type="text">
                 </div>
-                <div class="book_count_pages">Количество страниц: 365</div>
-                <div class="book_date">Год издания: 2010</div>
-                <div class="book_publishing_house">Под издательством: Пажилой жмапринт</div>
-
-            </div>
-
-            <div class="book_title_description">
-                <h1 class="book_title">Теплоизоляционные работы.<br> Справочное пособие</h1>
-                <div class="book_genre">
-                    <a href="#" class="book_genre_link">Деловая литература</a>
+                <div class="form_item">
+                    <label>Пароль</label><input class="input_autho input_pass" type="text">
                 </div>
-                <div class="book_author">
-                    <a href="#" class="book_author_link">Панина И.А.</a>
-                </div>
-                <div class="read_book">
-                    <button class="btn_read_book">Читать книгу</button>
-                </div>
-                <div class="book_description">
-                    Настоящее справочное пособие «Теплоизоляционные работы» предназначено для инженеров-сметчиков проектных, строительных и других организаций, занятых на теплоизоляционных работах трубопроводов и промышленного оборудования.В данном пособии собраны формулы
-                    для подсчетов объемов теплоизоляционных работ, а также в табличной форме представлены готовые данные по объемам изоляции и объемам покрытия изоляции трубопроводов и оборудования. Разъяснены положения технической части ГЭСН 81-02-26-2020
-                    «Теплоизоляционные работы» основываясь на положениях СП 61.13330.2012 «Тепловая изоляция оборудования и трубопроводов» и других нормативно-технических документов. В схематичной форме представлен способ выбора нормативов на изоляционные
-                    работы. Приведены примеры комплексного применения нормативов и коэффициентов, учитывающих условия производства работ.
-                </div>
-
-            </div>
-        </div>
-        <div class="title_similar_books">
-            <h1>Похожие книги</h1>
-        </div>
-        <div class="similar_books">
-            <div class="similar_book_item">
-                <a href="#" class="book_snippet">
-                    <div class="book_snippet_image">
-                        <img src="https://online-knigi.com.ua/pic/7/2/5/9/7/2/kniga-tvoe-slovo-si.webp" alt="">
-                    </div>
-                    <div class="book_snippet_name">Твоё слово(СИ)</div>
-                    <div class="book_snippet_autor">Лисканова Яна</div>
-                </a>
-            </div>
-            <div class="similar_book_item">
-                <a href="#" class="book_snippet">
-                    <div class="book_snippet_image">
-                        <img src="https://online-knigi.com.ua/pic/7/2/5/9/7/2/kniga-tvoe-slovo-si.webp" alt="">
-                    </div>
-                    <div class="book_snippet_name">Твоё слово(СИ)</div>
-                    <div class="book_snippet_autor">Лисканова Яна</div>
-                </a>
-            </div>
-            <div class="similar_book_item">
-                <a href="#" class="book_snippet">
-                    <div class="book_snippet_image">
-                        <img src="https://online-knigi.com.ua/pic/7/2/5/9/7/2/kniga-tvoe-slovo-si.webp" alt="">
-                    </div>
-                    <div class="book_snippet_name">Твоё слово(СИ)</div>
-                    <div class="book_snippet_autor">Лисканова Яна</div>
-                </a>
-            </div>
+                <button class="btn_accept_authorization">Войти</button>
+            </form>
         </div>
     </div>
 
