--- a/static/style_header.css
+++ b/static/style_header.css
@@ -121,9 +121,15 @@ body {
     flex-direction: column;
 }
 
+.navbar_main_content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
 .navbar_main {
     height: 52px;
-    margin-bottom: 20px;
     padding: 10px 0 10px 0;
     display: flex;
     flex-direction: row;
@@ -198,6 +204,30 @@ body {
     font-weight: 700;
     color: #212121;
     line-height: 24px;
+}
+
+.nav_authorization {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+
+.nav_btn {
+    margin-right: 10px;
+    padding: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    border-radius: 3px;
+    color: #000000;
+}
+
+.btn_authorization {
+    background-color: #56B156;
+}
+
+.btn_registration {
+    background-color: #53BCDC;
 }
 
 .navbar_search {
