--- a/templates/show_description_book.html
+++ b/templates/show_description_book.html
@@ -68,30 +68,26 @@
                 <div class="book_image">
                     <img src="https://online-knigi.com.ua/pic/6/9/8/1/0/7/kniga-teploizolyacionnye-raboty-spravochnoe-posobie.jpg" alt="">
                 </div>
-                <div class="book_count_pages">Количество страниц: 365</div>
-                <div class="book_date">Год издания: 2010</div>
-                <div class="book_publishing_house">Под издательством: Пажилой жмапринт</div>
+                <div class="book_count_pages">Количество страниц: {{ book.pageCount }}</div>
+                <div class="book_date">Год издания: {{ book.year }}</div>
+                <div class="book_publishing_house">Под издательством: {{ book.publishingHouse }}</div>
 
             </div>
 
             <div class="book_title_description">
-                <h1 class="book_title">Теплоизоляционные работы.<br> Справочное пособие</h1>
+                <h1 class="book_title"> {{ book.name }} </h1>
                 <div class="book_genre">
-                    <a href="#" class="book_genre_link">Деловая литература</a>
+                    <a href="#" class="book_genre_link"> {{ book.genre }} </a>
                 </div>
                 <div class="book_author">
-                    <a href="#" class="book_author_link">Панина И.А.</a>
+                    <a href="#" class="book_author_link"> {{ book.author }} </a>
                 </div>
                 <div class="read_book">
                     <button class="btn_read_book">Читать книгу</button>
                 </div>
                 <div class="book_description">
-                    Настоящее справочное пособие «Теплоизоляционные работы» предназначено для инженеров-сметчиков проектных, строительных и других организаций, занятых на теплоизоляционных работах трубопроводов и промышленного оборудования.В данном пособии собраны формулы
-                    для подсчетов объемов теплоизоляционных работ, а также в табличной форме представлены готовые данные по объемам изоляции и объемам покрытия изоляции трубопроводов и оборудования. Разъяснены положения технической части ГЭСН 81-02-26-2020
-                    «Теплоизоляционные работы» основываясь на положениях СП 61.13330.2012 «Тепловая изоляция оборудования и трубопроводов» и других нормативно-технических документов. В схематичной форме представлен способ выбора нормативов на изоляционные
-                    работы. Приведены примеры комплексного применения нормативов и коэффициентов, учитывающих условия производства работ.
+                    {{ book.annotation }}
                 </div>
-
             </div>
         </div>
         <div class="title_similar_books">
