--- a/static/style_registration.css
+++ b/static/style_registration.css
@@ -103,7 +103,7 @@ body {
 }
 
 .main_container {
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .header {
@@ -150,4 +150,15 @@ body {
     margin-left: 15px;
     font-weight: 700;
     font-size: 22px;
+}
+
+.modal_reg{
+    padding: 15px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+}
+.modal_error{
+    background-color: rgba(220,26,42,0.8);
 }
