--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/style_header.css" type="text/css">
+    <link rel="stylesheet" href="../static/style_add_book.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
@@ -48,8 +49,6 @@
                         </div>
                     </div>
                     <div class="nav_authorization">
-                        <!-- <a href="authorization.html" class="nav_btn btn_authorization" id="btn_authorization">Войти</a>
-                        <a href="registration.html" class="nav_btn btn_registration" id="btn_registration">Зарегестрироваться</a> -->
                         <a href="add_book.html" class="nav_btn btn_add_book" id="btn_add_book">Добавить книгу</a>
                         <div class="navbar_icon_profile"></div>
                     </div>
@@ -64,7 +63,12 @@
         </div>
     </div>
     <div class="main_container container">
-
+        <form class="form_add_book">
+            <h1>Добавить новую книгу</h1>
+            <div class="form_control">
+                <label>Название книги</label><input class="" type="text">
+            </div>
+        </form>
     </div>
 
 </body>
