--- a/static/style_add_book.css
+++ b/static/style_add_book.css
@@ -104,18 +104,53 @@ body {
 
 .container {
     margin: 0 50px 0 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.title_add_book {
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 .form_add_book {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+    width: 40%;
 }
 
 .form_control {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.form_add_book_input {
+    max-width: 220px;
+    width: 220px;
+    color: #000000;
+    font-weight: bold;
+    background: #eee;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    font-size: 14px;
+    line-height: 1.42857143;
+}
+
+.btn_place {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.btn_accept {
+    border: 0;
+    margin-right: 10px;
+    padding: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    border-radius: 3px;
+    color: #000000;
+    background-color: #56B156;
 }
