--- a/templates/authorization.html
+++ b/templates/authorization.html
@@ -12,4 +12,19 @@
             <button class="btn_accept_authorization">Войти</button>
         </form>
     </div>
+    <div class="modal_reg modal_error" id="modal_error" style="display: none;">
+        Неверный пароль или имя пользователя
+    </div>
+    <script>
+        function show_modal_error(){
+            let modal = document.getElementById("modal_error");
+            modal.style.display = "block";
+            setTimeout(()=>{
+                modal.style.display = "none";
+            }, 3000);
+        }
+        {% if err == True %}
+            show_modal_error()
+        {% endif %}
+    </script>
 {% endblock %}
