--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -4,11 +4,11 @@
         <h1 class="title_add_book">Добавить новую книгу</h1>
         <div class="form_control">
             <label>Название книги</label>
-            <input class="form_add_book_input" name="title_book" type="text">
+            <input class="form_add_book_input" name="title_book" type="text" required>
         </div>
         <div class="form_control">
             <label>Жанр</label>
-            <input class="form_add_book_input" name="genre_book" type="text">
+            <input class="form_add_book_input" name="genre_book" type="text" required>
         </div>
         <div class="form_control">
             <label>Описание</label>
@@ -16,11 +16,11 @@
         </div>
         <div class="form_control">
             <label>Год издания</label>
-            <input class="form_add_book_input" name="year_book" type="text">
+            <input class="form_add_book_input" name="year_book" type="text" required>
         </div>
         <div class="form_control">
             <label>Автор</label>
-            <input class="form_add_book_input" name="author_book" type="text">
+            <input class="form_add_book_input" name="author_book" type="text" required>
         </div>
         <div class="form_control">
             <label>Издательство</label>
@@ -28,7 +28,7 @@
         </div>
         <div class="form_control">
             <label>Количество страниц</label>
-            <input class="form_add_book_input" name="count_pages_book" type="text">
+            <input class="form_add_book_input" name="count_pages_book" type="text" required>
         </div>
         <div class="btn_place">
             <button class="btn_accept">Добавить</button>
