--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/style_header.css" type="text/css">
-<!--    <link rel="stylesheet" href="../static/style_add_book.css" type="text/css">-->
+    <link rel="stylesheet" href="../static/style_add_book.css" type="text/css">
     <link rel="stylesheet" href="../static/style_authorization.css" type="text/css">
     <link rel="stylesheet" href="../static/style_main_page.css" type="text/css">
     <link rel="stylesheet" href="../static/style_registration.css" type="text/css">
